fixes styles and layout issues

--- a/jukebox/beats_list.less
+++ b/jukebox/beats_list.less
@@ -55,13 +55,6 @@
     display: inline-block;
     min-width: 240px;
   }
-
-  .tag {
-    background-color: #fff;
-    margin: 0 8px;
-    padding: 0 3px;
-    display: inline-block;
-  }
 }
 
 .beats-list {
@@ -98,13 +91,6 @@
 
     .duration {
       color: #bbbbbb;
-    }
-
-    .tag {
-      padding: 3px 2px;
-      color: @blue;
-      background-color: #fefefe;
-      border: 1px solid transparent;
     }
 
     &.playing, &.selected {
