--- a/jukebox/jukebox.less
+++ b/jukebox/jukebox.less
@@ -2,7 +2,22 @@ body {
   overflow: hidden;
 }
 
+@divider_color: #e9e9e9;
+@blue: #66a1ee;
+@red: #ee6d66;
+
 .jukebox {
+  max-width: 480px;
+  border: 1px solid @divider_color;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+
   .shuffle_actions {
     padding: 6px 0;
 
@@ -10,19 +25,6 @@ body {
       margin-right: 12px;
     }
   }
-}
-
-@divider_color: #e9e9e9;
-@blue: #66a1ee;
-@red: #ee6d66;
-
-.jukebox {
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background-color: #fff;
 
   .playlist {
     overflow-y: scroll;
