--- a/jukebox/playlist_pills.less
+++ b/jukebox/playlist_pills.less
@@ -1,16 +1,9 @@
 @import "jukebox.less";
 
 .playlist-pills {
-  list-style-type: none;
-  margin-top: 24px;
-
   a {
     color: inherit;
     text-decoration: none;
-  }
-
-  ul {
-    padding: 0;
   }
 
   li {
