--- a/jukebox/tags_list.less
+++ b/jukebox/tags_list.less
@@ -1,1 +1,10 @@
 @import "jukebox.less";
+
+.tag {
+  margin: 0 8px;
+  display: inline-block;
+  padding: 3px 2px;
+  color: @blue;
+  background-color: #fefefe;
+  border: 1px solid transparent;
+}
